fix white space and add margin to code blocks that are on top of each other

--- a/src/components/codeWrapper/CodeWrapper.scss
+++ b/src/components/codeWrapper/CodeWrapper.scss
@@ -1,9 +1,13 @@
 .code-wrapper {
   margin: 0;
   overflow-x: auto;
-  
+
   & > pre {
     margin: 0;
     overflow: visible;
   }
+}
+
+.code-wrapper + .code-wrapper {
+  margin-top: 16px;
 }
